--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="box1"></div>
 	    <div class="box2"></div>
 	    <div class="box3"></div>
+	    <div class="box4"></div>
     </main>
 
 
