added sign in and sign up buttons

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,13 +21,16 @@
 
 
     <nav>
+        
         <div class="navbar">
             <a href="#">Home</a>
             <a href="#">Game</a>
             <a href="#">How to play</a>
             <a href="#">Leadersboard</a>
-            <a href="#">Contact</a>            
+            <a href="#">Contact</a>
         </div>
+        <div class="singin-btn"></div>
+        <div class="signup-btn"></div>
     </nav>
 
 
