added selected class for nav a tags

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 <body>
+    
 
 
     <header></header>
@@ -23,11 +24,11 @@
     <nav>
         
         <div class="navbar">
-            <a href="#">Home</a>
-            <a href="#">Game</a>
-            <a href="#">How to play</a>
-            <a href="#">Leadersboard</a>
-            <a href="#">Contact</a>
+            <a class= "selected" href="#">Home</a>
+            <a class= "selected" href="#">Game</a>
+            <a class= "selected" href="#">How to play</a>
+            <a class= "selected" href="#">Leadersboard</a>
+            <a class= "selected" href="#">Contact</a>
         </div>
         <div class="singin-btn"></div>
         <div class="signup-btn"></div>
