linked each webpage to the other

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <nav>
         
         <div class="navbar">
-            <a class= "selected" href="#">Home</a>
-            <a class= "selected" href="#">Game</a>
+            <a class= "selected" href="index.html">Home</a>
+            <a class= "selected" href="Game.html">Game</a>
             <a class= "selected" href="#">How to play</a>
-            <a class= "selected" href="#">Leadersboard</a>
-            <a class= "selected" href="#">Contact</a>
+            <a class= "selected" href="leaderbaord.html">Leadersboard</a>
+            <a class= "selected" href="Contact.html">Contact</a>
         </div>
         <div class="singin-btn"></div>
         <div class="signup-btn"></div>
