added sign in and up class and added styles to both

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
             <a class= "selected" href="leaderbaord.html">Leadersboard</a>
             <a class= "selected" href="Contact.html">Contact</a>
         </div>
-        <div class="singin-btn"></div>
-        <div class="signup-btn"></div>
+        <div class="signbtns">
+        <a href="">Sign-in</a>
+        <a href="">Sign-up</a>
+        </div>
     </nav>
 
 
