removed selected class from navbar

--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
 
 
 <body>
-    
+
 
 
     <header></header>
 
 
     <nav>
-        
+
         <div class="navbar">
-            <a class= "selected" href="index.html">Home</a>
-            <a class= "selected" href="Game.html">Game</a>
-            <a class= "selected" href="#">How to play</a>
-            <a class= "selected" href="leaderbaord.html">Leadersboard</a>
-            <a class= "selected" href="Contact.html">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="Game.html">Game</a>
+            <a href="#">How to play</a>
+            <a href="leaderbaord.html">Leadersboard</a>
+            <a href="Contact.html">Contact</a>
         </div>
         <div class="signbtns">
-        <a href="">Sign-in</a>
-        <a href="">Sign-up</a>
+            <a class="selected" href="Sign-in.html">Sign-in</a>
+            <a class="selected" href="Sign-up.html">Sign-up</a>
         </div>
     </nav>
 
